Fix overlay menu overflowing

--- a/resources/stylesheets/layout/_main-nav.scss
+++ b/resources/stylesheets/layout/_main-nav.scss
@@ -61,6 +61,7 @@
   display: block;
 
   width: 100%;
+  max-height: 100%;
   margin: 0 auto;
 
   font-weight: my.font-weight('bold');
